Allow all free content licences in the AppData files

--- a/data/fedora-appstream.conf
+++ b/data/fedora-appstream.conf
@@ -3,6 +3,9 @@
 # this is the distribution name used to prefix the appdata files
 DistroName=fedora-20
 
+# accpetable licences for the AppData files
+AcceptableContentLicences=CC0;CC BY;CC BY-SA;
+
 # categories that will be ignored and not written to the AppStream metadata
 IgnoreCategories=GTK;Qt;KDE;GNOME;
 
