Set the icon-size and the min-icon-size in the config file
Ubuntu doesn't use a 64x64 icon size.

--- a/data/fedora-appstream.conf
+++ b/data/fedora-appstream.conf
@@ -3,6 +3,13 @@
 # this is the distribution name used to prefix the appdata files
 DistroName=fedora-20
 
+# the size of the icons to be written to the icon cache
+# icons smaller than this will be padded with a transparent border
+IconSize=64
+
+# icons smaller than this will not be processed and the application will be skipped
+MinIconSize=32
+
 # accpetable licences for the AppData files
 AcceptableContentLicences=CC0;CC BY;CC BY-SA;
 
