--- a/data/fedora-appstream.conf
+++ b/data/fedora-appstream.conf
@@ -10,6 +10,9 @@ IconSize=64
 # icons smaller than this will not be processed and the application will be skipped
 MinIconSize=32
 
+# the hicolor icons will be used in this prefrence order
+PreferredIconSizes=64x64;128x128;96x96;256x256;scalable;48x48;32x32;24x24;16x16;
+
 # accpetable licences for the AppData files
 AcceptableContentLicences=CC0;CC BY;CC BY-SA;
 
