--- a/data/fedora-appstream.conf
+++ b/data/fedora-appstream.conf
@@ -16,6 +16,9 @@ PreferredIconSizes=64x64;128x128;96x96;256x256;scalable;48x48;32x32;24x24;16x16;
 # accpetable licences for the AppData files
 AcceptableContentLicences=CC0;CC BY;CC BY-SA;
 
+# packages matching this will be downloaded
+InterestingInstalledFiles=/usr/share/applications/*.desktop;/usr/share/applications/kde4/*.desktop;
+
 # categories that will be ignored and not written to the AppStream metadata
 IgnoreCategories=GTK;Qt;KDE;GNOME;
 
