Generate AppStream metadata for font packages

--- a/data/fedora-appstream.conf
+++ b/data/fedora-appstream.conf
@@ -17,7 +17,7 @@ PreferredIconSizes=64x64;128x128;96x96;256x256;scalable;48x48;32x32;24x24;16x16;
 AcceptableContentLicences=CC0;CC BY;CC BY-SA;
 
 # packages matching this will be downloaded
-InterestingInstalledFiles=/usr/share/applications/*.desktop;/usr/share/applications/kde4/*.desktop;
+InterestingInstalledFiles=/usr/share/applications/*.desktop;/usr/share/applications/kde4/*.desktop;/usr/share/fonts/*/*.otf;/usr/share/fonts/*/*.ttf;
 
 # categories that will be ignored and not written to the AppStream metadata
 IgnoreCategories=GTK;Qt;KDE;GNOME;
