Blacklist the MATE control center applications

--- a/data/fedora-appstream.conf
+++ b/data/fedora-appstream.conf
@@ -26,13 +26,13 @@ InterestingInstalledFiles=/usr/share/applications/*.desktop;/usr/share/applicati
 IgnoreCategories=GTK;Qt;KDE;GNOME;
 
 # application ID wildcards that if match blacklist the application
-BlacklistIds=display-properties;mate-*;xfce4-accessibility-settings;xfce4-mime-settings;xfce4-settings-editor;xfce-keyboard-settings;xfce-mouse-settings;xfce-settings-manager;xfce-ui-settings;xfce4-about;redhat-userpasswd;system-config-date;gnome-wacom-panel;redhat-usermount;system-config-*;nm-connection-editor;lxinput;lxrandr;xfce4-session-logout;gnome-glade-2;glade3;active-*;
+BlacklistIds=display-properties;mate-*;xfce4-accessibility-settings;xfce4-mime-settings;xfce4-settings-editor;xfce-keyboard-settings;xfce-mouse-settings;xfce-settings-manager;xfce-ui-settings;xfce4-about;redhat-userpasswd;system-config-date;gnome-wacom-panel;redhat-usermount;system-config-*;nm-connection-editor;lxinput;lxrandr;xfce4-session-logout;gnome-glade-2;glade3;active-*;caja-home;
 
 # category wildcards that if match blacklist the application
 BlacklistCategories=X-*-Settings-Panel;X-*-SettingsDialog;
 
 # package wildcards that are blacklisted
-BlacklistPackages=beneath-a-steel-sky-cd;anaconda;
+BlacklistPackages=beneath-a-steel-sky-cd;anaconda;mate-control-center;
 
 # these are packages that require extra categories to be added
 CategoryAdd(nautilus)=FileManager;
