Blacklist lxde-common, they are just settings panels

--- a/data/fedora-appstream.conf
+++ b/data/fedora-appstream.conf
@@ -32,7 +32,7 @@ BlacklistIds=display-properties;mate-*;xfce4-accessibility-settings;xfce4-mime-s
 BlacklistCategories=X-*-Settings-Panel;X-*-SettingsDialog;
 
 # package wildcards that are blacklisted
-BlacklistPackages=beneath-a-steel-sky-cd;anaconda;mate-control-center;
+BlacklistPackages=beneath-a-steel-sky-cd;anaconda;mate-control-center;lxde-common;
 
 # these are packages that require extra categories to be added
 CategoryAdd(nautilus)=FileManager;
