Rescue some settings that are useful apps

--- a/data/fedora-appstream.conf
+++ b/data/fedora-appstream.conf
@@ -35,12 +35,14 @@ BlacklistCategories=X-*-Settings-Panel;X-*-SettingsDialog;
 BlacklistPackages=beneath-a-steel-sky-cd;anaconda;mate-control-center;lxde-common;
 
 # these are packages that require extra categories to be added
-CategoryAdd(nautilus)=FileManager;
-CategoryAdd(rhythmbox)=Player;
-CategoryAdd(gnome-software)=Settings;PackageManager;
-CategoryAdd(nautilus)=System;FileManager;
-CategoryAdd(gnome-terminal)=System;
+CategoryAdd(0install)=System;
+CategoryAdd(alacarte)=System;
 CategoryAdd(deja-dup)=Utility;
+CategoryAdd(gddccontrol)=System;
+CategoryAdd(gnome-terminal)=System;
+CategoryAdd(nautilus)=System;FileManager;
+CategoryAdd(pessulus)=System;
+CategoryAdd(rhythmbox)=Player;
 
 # these are packages that are required before the icon can be extracted
 PackageData(alliance-libs)=alliance
