Allow overriding the project group for applications
This is only for when the heuristic fails.

--- a/data/fedora-appstream.conf
+++ b/data/fedora-appstream.conf
@@ -44,6 +44,9 @@ CategoryAdd(nautilus)=System;FileManager;
 CategoryAdd(pessulus)=System;
 CategoryAdd(rhythmbox)=Player;
 
+# these are packages that are compatible with only one kind of project group
+ProjectGroup(nemo)=Cinnamon
+
 # these are packages that are required before the icon can be extracted
 PackageData(alliance-libs)=alliance
 PackageData(beneath-a-steel-sky*)=scummvm
