Add screenshot data to the AppStream metadata

--- a/data/fedora-appstream.conf
+++ b/data/fedora-appstream.conf
@@ -10,6 +10,12 @@ IconSize=64
 # icons smaller than this will not be processed and the application will be skipped
 MinIconSize=32
 
+# the mirror URL we want to use for screenshots
+ScreenshotMirrorUrl=http://alt.fedoraproject.org/pub/alt/screenshots/
+
+# the thumbnail sizes for screenshots
+ScreenshotThumbnailSizes=624x351;110x62;
+
 # font screenshots will be created of exactly this width
 FontScreenshotWidth=640
 
