--- a/data/fedora-appstream.conf
+++ b/data/fedora-appstream.conf
@@ -34,6 +34,13 @@ IgnoreCategories=GTK;Qt;KDE;GNOME;
 # application ID wildcards that if match blacklist the application
 BlacklistIds=display-properties;mate-*;xfce4-accessibility-settings;xfce4-mime-settings;xfce4-settings-editor;xfce-keyboard-settings;xfce-mouse-settings;xfce-settings-manager;xfce-ui-settings;xfce4-about;redhat-userpasswd;system-config-date;gnome-wacom-panel;redhat-usermount;system-config-*;nm-connection-editor;lxinput;lxrandr;xfce4-session-logout;gnome-glade-2;glade3;active-*;caja-home;gcompris-edit;razor-config*;lxde-desktop-preferences;authconfig;cinnamon-settings;midori-private;xinput_calibrator;bted;
 
+# application id's that are essential for the desktop
+CompulsoryForDesktop(gstreamer-ogg-theora-vorbis)=GNOME;KDE;
+CompulsoryForDesktop(ibus-hangul)=GNOME;
+CompulsoryForDesktop(ibus-kkc)=GNOME;
+CompulsoryForDesktop(ibus-libpinyin)=GNOME;
+CompulsoryForDesktop(ibus-m17n)=GNOME;
+
 # category wildcards that if match blacklist the application
 BlacklistCategories=X-*-Settings-Panel;X-*-SettingsDialog;
 
