calligra-krita needs calligra-core

--- a/data/fedora-appstream.conf
+++ b/data/fedora-appstream.conf
@@ -73,3 +73,4 @@ PackageData(speed-dreams)=speed-dreams-robots-base
 PackageData(switchdesk-gui)=switchdesk
 PackageData(transmission-*)=transmission-common
 PackageData(vegastrike)=vegastrike-data
+PackageData(calligra-krita)=calligra-core
