Build a 3rd screenshot thumbnail size

--- a/data/fedora-appstream.conf
+++ b/data/fedora-appstream.conf
@@ -8,7 +8,7 @@ IconSize=64
 MinIconSize=32
 
 # the thumbnail sizes for screenshots
-ScreenshotThumbnailSizes=624x351;112x63;
+ScreenshotThumbnailSizes=624x351;112x63;752x423;
 
 # font screenshots will be created of exactly this width
 FontScreenshotWidth=640
