trivial: Remove some added categories

--- a/data/fedora-appstream.conf
+++ b/data/fedora-appstream.conf
@@ -45,8 +45,7 @@ CategoryAdd(0install)=System;
 CategoryAdd(alacarte)=System;
 CategoryAdd(deja-dup)=Utility;
 CategoryAdd(gddccontrol)=System;
-CategoryAdd(gnome-terminal)=System;
-CategoryAdd(nautilus)=System;FileManager;
+CategoryAdd(nautilus)=System;
 CategoryAdd(pessulus)=System;
 
 # these are packages that are compatible with only one kind of project group
