--- a/data/fedora-appstream.conf
+++ b/data/fedora-appstream.conf
@@ -17,7 +17,7 @@ FontScreenshotWidth=640
 PreferredIconSizes=64x64;128x128;96x96;256x256;scalable;48x48;32x32;24x24;16x16;
 
 # accpetable licences for the AppData files
-AcceptableContentLicences=CC0;CC-BY;CC-BY-SA;
+AcceptableContentLicences=CC0;CC-BY;CC-BY-SA;GFDL;
 
 # packages matching this will be downloaded
 InterestingInstalledFiles=/usr/share/applications/*.desktop;/usr/share/applications/kde4/*.desktop;/usr/share/fonts/*/*.otf;/usr/share/fonts/*/*.ttf;/usr/share/ibus/component/*.xml;/usr/share/ibus-table/tables/*.db;/usr/lib64/gstreamer-1.0/libgst*.so;
